# benchfoon

./: .gitignore  LICENSE.md  README.md
load_tester/: go.mod  go.sum  main.go
rust/axum/: Cargo.toml
rust/axum/src/: main.rs
