[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0"
axum-extra = { version = "0", features = ["query"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
